Integrated enhanced UI with backend, general/recommendations pending

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -27,7 +27,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body class="bg agileinfo">
 	<div class="fullscreen-bg">
     <video loop muted autoplay class="fullscreen-bg__video">
-        <source src="rain.mp4" type="video/mp4">
+        <source src="{{ url_for('static', filename='stylesheets/assets/rain.mp4') }}" type="video/mp4">
     </video>
 </div>
    <h1 class="agile_head text-center"> Alfred - Uniting the Internet</h1>
