--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 
 	<title>Welcome </title>
 </head>
@@ -13,16 +13,15 @@
       <a class="navbar-brand" href="#">Alfred</a>
     </div>
     <ul class="nav navbar-nav">
-      <li ><a href="home.html">Home</a></li>
-      <li class="active"><a href="#">Online shopping</a></li>
-      <li><a href="videos.html">Video to watch</a></li>
-      <li><a href="general.html">General bookmarks</a></li>
-      <li ><a href="recommendations.html">Recommendations</a></li>
+      <li ><a href="/dashboard">Home</a></li>
+      <li class="/shopping"><a href="#">Online shopping</a></li>
+      <li><a href="/videos">Video to watch</a></li>
+      <li><a href="/general">General bookmarks</a></li>
+      <li ><a href="/recommendations">Recommendations</a></li>
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
     </ul>
   </div>
 </nav>
@@ -31,9 +30,7 @@
 <div class="container">
     <div class="row">
 		<div class="well">
-        <h1 class="text-center">Here is your shopping list</h1>
-
-       
+        <h1 style = "font-family: run; src: url('assets/fonts/run.ttf');" class="text-center">Here is your shopping list</h1>
         </div>
 	</div>
 </div>
@@ -43,32 +40,35 @@
    <div class = "container" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);transition: 0.3s;" >
 
 
-            <a href="#" >
+            
 
                   <div class="media col-md-3">
                     </br>
                       <figure class="pull-left" >
-                          <img class="media-object img-rounded img-responsive"  width="220px"  src="http://placehold.it/350x250" alt="placehold.it/350x250" >
+                          <img style = "max-width:150px; max-height:250px"class="media-object img-rounded img-responsive"  width="220px"  src="{{image_url}}" alt="placehold.it/350x250" >
                       </br>
                       </figure>
                   </div>
                   <div>
                       <h2>{{ title }}</h2>
-                      <h4>{{ price }}</h4>
+                      <b><h4>{{ price }}</h4><b>
                   </div>
                   <div class="col-md-3 text-center">
                       </br></br>
-                      <button type="button" class="btn btn-default btn-lg btn-block"> Buy Now! </button>  
+                      <a href="{{prod_url}}" >
+                      <button type="button" class="btn btn-warning btn-lg btn-block"> Buy Now! </button>  
+                      </a>
                   </div>
-            </a>
+            
            
           </div>
   {% endfor %}
 {% else %}
   <h2> No items to show </h2>
 {% endif %}
-<script src="bootstrap-3.3.7/dist/jquery-3.3.1.min.js"></script>
-<script src="dist/js/bootstrap.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
