--- a/templates/general.html
+++ b/templates/general.html
@@ -27,7 +27,7 @@
   </div>
 </nav>
 
-
+{% include 'includes/_messages.html' %}
 <div class="container">
     <div class="row">
 		<div class="well">
