--- a/templates/videos.html
+++ b/templates/videos.html
@@ -26,7 +26,7 @@
   </div>
 </nav>
 
-
+{% include 'includes/_messages.html' %}
 <div class="container">
     <div class="row">
 		<div class="well">
