--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -56,7 +56,7 @@
                   <div class="col-md-3 text-center">
                       </br></br>
                       <a href="{{prod_url}}" >
-                      <button type="button" class="btn btn-warning btn-lg btn-block"> Buy Now! </button>  
+                      <button type="button" style="margin-bottom: 10px" class="btn btn-warning btn-lg btn-block"> Buy Now! </button>  
                       </a>
                   </div>
             
