Implemented general bookmarks

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
       <a class="navbar-brand" href="#">Alfred</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="/dashboard">Home</a></li>
       <li><a href="/shopping">Online shopping</a></li>
       <li><a href="/videos">Video to watch</a></li>
       <li><a href="/general">General bookmarks</a></li>
@@ -31,7 +31,7 @@
     <div class="jumbotron" align = "center" style = "padding-top: 10px; padding-bottom: 15px;">
       <h1 style = "font-family: run; src: url('assets/fonts/run.ttf');">Welcome to ALFRED</h1>
     
-      <h2 >Your Internet guide</h2>
+      <h2>Keeping your internet together in one place</h2>
 
       
     </div>
