--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -17,7 +17,7 @@
       <li><a href="/shopping">Online shopping</a></li>
       <li><a href="/videos">Video to watch</a></li>
       <li><a href="/general">General bookmarks</a></li>
-      <li class="active"><a href="#">Recommendations</a></li>
+      <li class="active"><a href="/recommendations">Recommendations</a></li>
 
 
     </ul>
